--- a/examples/pdf2images.ipynb
+++ b/examples/pdf2images.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,21 +95,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Imagen: 3a72b721-569e-47f0-b12b-d25439cdf52b\n",
-      "Parents: ['fbf8f600-a8fb-47a9-b755-ed63a9506387']\n",
+      "Imagen: 8b97f4f1-1fe3-4702-ab0a-0ca2eb70fcd6\n",
+      "Parents: {'8a185067-f5da-4069-9f0d-488ab647a5ea'}\n",
       "Metadata: {'pdf_path': 'document.pdf', 'page': 1, 'size': (1700, 2200)}\n",
-      "Imagen: 807caf6f-8d54-4e0a-bd80-71410d3749ad\n",
-      "Parents: ['fbf8f600-a8fb-47a9-b755-ed63a9506387']\n",
+      "Imagen: 2169329b-7bad-441a-b29e-6eca1811f3a3\n",
+      "Parents: {'8a185067-f5da-4069-9f0d-488ab647a5ea'}\n",
       "Metadata: {'pdf_path': 'document.pdf', 'page': 2, 'size': (1700, 2200)}\n",
-      "Imagen: ed91dbda-93de-4dea-809a-350390b3b4ca\n",
-      "Parents: ['fbf8f600-a8fb-47a9-b755-ed63a9506387']\n",
+      "Imagen: 265d7a84-67d3-43aa-9b43-395a6adc55f0\n",
+      "Parents: {'8a185067-f5da-4069-9f0d-488ab647a5ea'}\n",
       "Metadata: {'pdf_path': 'document.pdf', 'page': 3, 'size': (1700, 2200)}\n"
      ]
     }
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -151,49 +151,49 @@
        " viewBox=\"0.00 0.00 539.46 151.48\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">\n",
        "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 147.48)\">\n",
        "<polygon fill=\"white\" stroke=\"transparent\" points=\"-4,4 -4,-147.48 535.46,-147.48 535.46,4 -4,4\"/>\n",
-       "<!-- fa3c6ded&#45;8d6b&#45;44c6&#45;a7c7&#45;4076b7c5b7e0 -->\n",
+       "<!-- 01d2b3a7&#45;0023&#45;4412&#45;9914&#45;8e2d5128af70 -->\n",
        "<g id=\"node1\" class=\"node\">\n",
-       "<title>fa3c6ded&#45;8d6b&#45;44c6&#45;a7c7&#45;4076b7c5b7e0</title>\n",
+       "<title>01d2b3a7&#45;0023&#45;4412&#45;9914&#45;8e2d5128af70</title>\n",
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"265.73\" cy=\"-116.61\" rx=\"74.91\" ry=\"26.74\"/>\n",
        "<text text-anchor=\"middle\" x=\"265.73\" y=\"-120.41\" font-family=\"Times-Roman\" font-size=\"14.00\">PDFDocument</text>\n",
-       "<text text-anchor=\"middle\" x=\"265.73\" y=\"-105.41\" font-family=\"Times-Roman\" font-size=\"14.00\">76b7c5b7e0</text>\n",
+       "<text text-anchor=\"middle\" x=\"265.73\" y=\"-105.41\" font-family=\"Times-Roman\" font-size=\"14.00\">2d5128af70</text>\n",
        "</g>\n",
-       "<!-- ed295c95&#45;e16a&#45;4220&#45;ad8c&#45;93b11fc609b0 -->\n",
+       "<!-- 163a447f&#45;02d7&#45;421c&#45;96ab&#45;081efc1901a9 -->\n",
        "<g id=\"node2\" class=\"node\">\n",
-       "<title>ed295c95&#45;e16a&#45;4220&#45;ad8c&#45;93b11fc609b0</title>\n",
+       "<title>163a447f&#45;02d7&#45;421c&#45;96ab&#45;081efc1901a9</title>\n",
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"82.73\" cy=\"-26.87\" rx=\"82.96\" ry=\"26.74\"/>\n",
        "<text text-anchor=\"middle\" x=\"82.73\" y=\"-30.67\" font-family=\"Times-Roman\" font-size=\"14.00\">ImageDocument</text>\n",
-       "<text text-anchor=\"middle\" x=\"82.73\" y=\"-15.67\" font-family=\"Times-Roman\" font-size=\"14.00\">b11fc609b0</text>\n",
+       "<text text-anchor=\"middle\" x=\"82.73\" y=\"-15.67\" font-family=\"Times-Roman\" font-size=\"14.00\">1efc1901a9</text>\n",
        "</g>\n",
-       "<!-- fa3c6ded&#45;8d6b&#45;44c6&#45;a7c7&#45;4076b7c5b7e0&#45;&gt;ed295c95&#45;e16a&#45;4220&#45;ad8c&#45;93b11fc609b0 -->\n",
+       "<!-- 01d2b3a7&#45;0023&#45;4412&#45;9914&#45;8e2d5128af70&#45;&gt;163a447f&#45;02d7&#45;421c&#45;96ab&#45;081efc1901a9 -->\n",
        "<g id=\"edge1\" class=\"edge\">\n",
-       "<title>fa3c6ded&#45;8d6b&#45;44c6&#45;a7c7&#45;4076b7c5b7e0&#45;&gt;ed295c95&#45;e16a&#45;4220&#45;ad8c&#45;93b11fc609b0</title>\n",
+       "<title>01d2b3a7&#45;0023&#45;4412&#45;9914&#45;8e2d5128af70&#45;&gt;163a447f&#45;02d7&#45;421c&#45;96ab&#45;081efc1901a9</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M221.9,-94.59C196.45,-82.39 164.19,-66.92 137.13,-53.95\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"138.33,-50.64 127.8,-49.48 135.3,-56.96 138.33,-50.64\"/>\n",
        "</g>\n",
-       "<!-- da5abdff&#45;115a&#45;4206&#45;a7fb&#45;fe84e0e7e60e -->\n",
+       "<!-- 4661c062&#45;1e2f&#45;4b4a&#45;8a55&#45;9d553d366db7 -->\n",
        "<g id=\"node3\" class=\"node\">\n",
-       "<title>da5abdff&#45;115a&#45;4206&#45;a7fb&#45;fe84e0e7e60e</title>\n",
+       "<title>4661c062&#45;1e2f&#45;4b4a&#45;8a55&#45;9d553d366db7</title>\n",
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"265.73\" cy=\"-26.87\" rx=\"82.96\" ry=\"26.74\"/>\n",
        "<text text-anchor=\"middle\" x=\"265.73\" y=\"-30.67\" font-family=\"Times-Roman\" font-size=\"14.00\">ImageDocument</text>\n",
-       "<text text-anchor=\"middle\" x=\"265.73\" y=\"-15.67\" font-family=\"Times-Roman\" font-size=\"14.00\">84e0e7e60e</text>\n",
+       "<text text-anchor=\"middle\" x=\"265.73\" y=\"-15.67\" font-family=\"Times-Roman\" font-size=\"14.00\">553d366db7</text>\n",
        "</g>\n",
-       "<!-- fa3c6ded&#45;8d6b&#45;44c6&#45;a7c7&#45;4076b7c5b7e0&#45;&gt;da5abdff&#45;115a&#45;4206&#45;a7fb&#45;fe84e0e7e60e -->\n",
+       "<!-- 01d2b3a7&#45;0023&#45;4412&#45;9914&#45;8e2d5128af70&#45;&gt;4661c062&#45;1e2f&#45;4b4a&#45;8a55&#45;9d553d366db7 -->\n",
        "<g id=\"edge2\" class=\"edge\">\n",
-       "<title>fa3c6ded&#45;8d6b&#45;44c6&#45;a7c7&#45;4076b7c5b7e0&#45;&gt;da5abdff&#45;115a&#45;4206&#45;a7fb&#45;fe84e0e7e60e</title>\n",
+       "<title>01d2b3a7&#45;0023&#45;4412&#45;9914&#45;8e2d5128af70&#45;&gt;4661c062&#45;1e2f&#45;4b4a&#45;8a55&#45;9d553d366db7</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M265.73,-89.29C265.73,-81.32 265.73,-72.43 265.73,-63.94\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"269.23,-63.87 265.73,-53.87 262.23,-63.87 269.23,-63.87\"/>\n",
        "</g>\n",
-       "<!-- 4eb24260&#45;1ef4&#45;49ec&#45;86e6&#45;57b6721a2250 -->\n",
+       "<!-- 56c9d47b&#45;eff2&#45;4a72&#45;a96c&#45;0414afdec146 -->\n",
        "<g id=\"node4\" class=\"node\">\n",
-       "<title>4eb24260&#45;1ef4&#45;49ec&#45;86e6&#45;57b6721a2250</title>\n",
+       "<title>56c9d47b&#45;eff2&#45;4a72&#45;a96c&#45;0414afdec146</title>\n",
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"448.73\" cy=\"-26.87\" rx=\"82.96\" ry=\"26.74\"/>\n",
        "<text text-anchor=\"middle\" x=\"448.73\" y=\"-30.67\" font-family=\"Times-Roman\" font-size=\"14.00\">ImageDocument</text>\n",
-       "<text text-anchor=\"middle\" x=\"448.73\" y=\"-15.67\" font-family=\"Times-Roman\" font-size=\"14.00\">b6721a2250</text>\n",
+       "<text text-anchor=\"middle\" x=\"448.73\" y=\"-15.67\" font-family=\"Times-Roman\" font-size=\"14.00\">14afdec146</text>\n",
        "</g>\n",
-       "<!-- fa3c6ded&#45;8d6b&#45;44c6&#45;a7c7&#45;4076b7c5b7e0&#45;&gt;4eb24260&#45;1ef4&#45;49ec&#45;86e6&#45;57b6721a2250 -->\n",
+       "<!-- 01d2b3a7&#45;0023&#45;4412&#45;9914&#45;8e2d5128af70&#45;&gt;56c9d47b&#45;eff2&#45;4a72&#45;a96c&#45;0414afdec146 -->\n",
        "<g id=\"edge3\" class=\"edge\">\n",
-       "<title>fa3c6ded&#45;8d6b&#45;44c6&#45;a7c7&#45;4076b7c5b7e0&#45;&gt;4eb24260&#45;1ef4&#45;49ec&#45;86e6&#45;57b6721a2250</title>\n",
+       "<title>01d2b3a7&#45;0023&#45;4412&#45;9914&#45;8e2d5128af70&#45;&gt;56c9d47b&#45;eff2&#45;4a72&#45;a96c&#45;0414afdec146</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M309.56,-94.59C335.01,-82.39 367.28,-66.92 394.33,-53.95\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"396.16,-56.96 403.67,-49.48 393.13,-50.64 396.16,-56.96\"/>\n",
        "</g>\n",
@@ -201,10 +201,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.sources.Source at 0x7fae0025c1c0>"
+       "<graphviz.sources.Source at 0x7f881006aaf0>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
