Documents as attributes of a Document

--- a/examples/pdf2images.ipynb
+++ b/examples/pdf2images.ipynb
@@ -102,14 +102,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Imagen: 8b97f4f1-1fe3-4702-ab0a-0ca2eb70fcd6\n",
-      "Parents: {'8a185067-f5da-4069-9f0d-488ab647a5ea'}\n",
+      "Imagen: d559bddb-5640-47a8-8afd-9690f0eb1b49\n",
+      "Parents: {'b0aa3580-f055-4790-980e-71dd8abc3535'}\n",
       "Metadata: {'pdf_path': 'document.pdf', 'page': 1, 'size': (1700, 2200)}\n",
-      "Imagen: 2169329b-7bad-441a-b29e-6eca1811f3a3\n",
-      "Parents: {'8a185067-f5da-4069-9f0d-488ab647a5ea'}\n",
+      "Imagen: ec43200a-ced7-4473-83f5-4f4bc281a4bf\n",
+      "Parents: {'b0aa3580-f055-4790-980e-71dd8abc3535'}\n",
       "Metadata: {'pdf_path': 'document.pdf', 'page': 2, 'size': (1700, 2200)}\n",
-      "Imagen: 265d7a84-67d3-43aa-9b43-395a6adc55f0\n",
-      "Parents: {'8a185067-f5da-4069-9f0d-488ab647a5ea'}\n",
+      "Imagen: 10583a62-714f-4fa2-954d-7d8abd371caf\n",
+      "Parents: {'b0aa3580-f055-4790-980e-71dd8abc3535'}\n",
       "Metadata: {'pdf_path': 'document.pdf', 'page': 3, 'size': (1700, 2200)}\n"
      ]
     }
@@ -151,49 +151,49 @@
        " viewBox=\"0.00 0.00 539.46 151.48\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">\n",
        "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 147.48)\">\n",
        "<polygon fill=\"white\" stroke=\"transparent\" points=\"-4,4 -4,-147.48 535.46,-147.48 535.46,4 -4,4\"/>\n",
-       "<!-- 01d2b3a7&#45;0023&#45;4412&#45;9914&#45;8e2d5128af70 -->\n",
+       "<!-- 516d37df&#45;76fa&#45;4c87&#45;81f3&#45;3182fb4d8c92 -->\n",
        "<g id=\"node1\" class=\"node\">\n",
-       "<title>01d2b3a7&#45;0023&#45;4412&#45;9914&#45;8e2d5128af70</title>\n",
+       "<title>516d37df&#45;76fa&#45;4c87&#45;81f3&#45;3182fb4d8c92</title>\n",
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"265.73\" cy=\"-116.61\" rx=\"74.91\" ry=\"26.74\"/>\n",
        "<text text-anchor=\"middle\" x=\"265.73\" y=\"-120.41\" font-family=\"Times-Roman\" font-size=\"14.00\">PDFDocument</text>\n",
-       "<text text-anchor=\"middle\" x=\"265.73\" y=\"-105.41\" font-family=\"Times-Roman\" font-size=\"14.00\">2d5128af70</text>\n",
+       "<text text-anchor=\"middle\" x=\"265.73\" y=\"-105.41\" font-family=\"Times-Roman\" font-size=\"14.00\">82fb4d8c92</text>\n",
        "</g>\n",
-       "<!-- 163a447f&#45;02d7&#45;421c&#45;96ab&#45;081efc1901a9 -->\n",
+       "<!-- 4bbfb70d&#45;8f37&#45;4cc5&#45;9392&#45;4356b4a57f2f -->\n",
        "<g id=\"node2\" class=\"node\">\n",
-       "<title>163a447f&#45;02d7&#45;421c&#45;96ab&#45;081efc1901a9</title>\n",
+       "<title>4bbfb70d&#45;8f37&#45;4cc5&#45;9392&#45;4356b4a57f2f</title>\n",
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"82.73\" cy=\"-26.87\" rx=\"82.96\" ry=\"26.74\"/>\n",
        "<text text-anchor=\"middle\" x=\"82.73\" y=\"-30.67\" font-family=\"Times-Roman\" font-size=\"14.00\">ImageDocument</text>\n",
-       "<text text-anchor=\"middle\" x=\"82.73\" y=\"-15.67\" font-family=\"Times-Roman\" font-size=\"14.00\">1efc1901a9</text>\n",
+       "<text text-anchor=\"middle\" x=\"82.73\" y=\"-15.67\" font-family=\"Times-Roman\" font-size=\"14.00\">56b4a57f2f</text>\n",
        "</g>\n",
-       "<!-- 01d2b3a7&#45;0023&#45;4412&#45;9914&#45;8e2d5128af70&#45;&gt;163a447f&#45;02d7&#45;421c&#45;96ab&#45;081efc1901a9 -->\n",
+       "<!-- 516d37df&#45;76fa&#45;4c87&#45;81f3&#45;3182fb4d8c92&#45;&gt;4bbfb70d&#45;8f37&#45;4cc5&#45;9392&#45;4356b4a57f2f -->\n",
        "<g id=\"edge1\" class=\"edge\">\n",
-       "<title>01d2b3a7&#45;0023&#45;4412&#45;9914&#45;8e2d5128af70&#45;&gt;163a447f&#45;02d7&#45;421c&#45;96ab&#45;081efc1901a9</title>\n",
+       "<title>516d37df&#45;76fa&#45;4c87&#45;81f3&#45;3182fb4d8c92&#45;&gt;4bbfb70d&#45;8f37&#45;4cc5&#45;9392&#45;4356b4a57f2f</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M221.9,-94.59C196.45,-82.39 164.19,-66.92 137.13,-53.95\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"138.33,-50.64 127.8,-49.48 135.3,-56.96 138.33,-50.64\"/>\n",
        "</g>\n",
-       "<!-- 4661c062&#45;1e2f&#45;4b4a&#45;8a55&#45;9d553d366db7 -->\n",
+       "<!-- dd25eec8&#45;1dde&#45;433c&#45;8a1a&#45;4240e6953260 -->\n",
        "<g id=\"node3\" class=\"node\">\n",
-       "<title>4661c062&#45;1e2f&#45;4b4a&#45;8a55&#45;9d553d366db7</title>\n",
+       "<title>dd25eec8&#45;1dde&#45;433c&#45;8a1a&#45;4240e6953260</title>\n",
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"265.73\" cy=\"-26.87\" rx=\"82.96\" ry=\"26.74\"/>\n",
        "<text text-anchor=\"middle\" x=\"265.73\" y=\"-30.67\" font-family=\"Times-Roman\" font-size=\"14.00\">ImageDocument</text>\n",
-       "<text text-anchor=\"middle\" x=\"265.73\" y=\"-15.67\" font-family=\"Times-Roman\" font-size=\"14.00\">553d366db7</text>\n",
+       "<text text-anchor=\"middle\" x=\"265.73\" y=\"-15.67\" font-family=\"Times-Roman\" font-size=\"14.00\">40e6953260</text>\n",
        "</g>\n",
-       "<!-- 01d2b3a7&#45;0023&#45;4412&#45;9914&#45;8e2d5128af70&#45;&gt;4661c062&#45;1e2f&#45;4b4a&#45;8a55&#45;9d553d366db7 -->\n",
+       "<!-- 516d37df&#45;76fa&#45;4c87&#45;81f3&#45;3182fb4d8c92&#45;&gt;dd25eec8&#45;1dde&#45;433c&#45;8a1a&#45;4240e6953260 -->\n",
        "<g id=\"edge2\" class=\"edge\">\n",
-       "<title>01d2b3a7&#45;0023&#45;4412&#45;9914&#45;8e2d5128af70&#45;&gt;4661c062&#45;1e2f&#45;4b4a&#45;8a55&#45;9d553d366db7</title>\n",
+       "<title>516d37df&#45;76fa&#45;4c87&#45;81f3&#45;3182fb4d8c92&#45;&gt;dd25eec8&#45;1dde&#45;433c&#45;8a1a&#45;4240e6953260</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M265.73,-89.29C265.73,-81.32 265.73,-72.43 265.73,-63.94\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"269.23,-63.87 265.73,-53.87 262.23,-63.87 269.23,-63.87\"/>\n",
        "</g>\n",
-       "<!-- 56c9d47b&#45;eff2&#45;4a72&#45;a96c&#45;0414afdec146 -->\n",
+       "<!-- 96b783b5&#45;627f&#45;4a37&#45;b5f5&#45;1109dfd8191b -->\n",
        "<g id=\"node4\" class=\"node\">\n",
-       "<title>56c9d47b&#45;eff2&#45;4a72&#45;a96c&#45;0414afdec146</title>\n",
+       "<title>96b783b5&#45;627f&#45;4a37&#45;b5f5&#45;1109dfd8191b</title>\n",
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"448.73\" cy=\"-26.87\" rx=\"82.96\" ry=\"26.74\"/>\n",
        "<text text-anchor=\"middle\" x=\"448.73\" y=\"-30.67\" font-family=\"Times-Roman\" font-size=\"14.00\">ImageDocument</text>\n",
-       "<text text-anchor=\"middle\" x=\"448.73\" y=\"-15.67\" font-family=\"Times-Roman\" font-size=\"14.00\">14afdec146</text>\n",
+       "<text text-anchor=\"middle\" x=\"448.73\" y=\"-15.67\" font-family=\"Times-Roman\" font-size=\"14.00\">09dfd8191b</text>\n",
        "</g>\n",
-       "<!-- 01d2b3a7&#45;0023&#45;4412&#45;9914&#45;8e2d5128af70&#45;&gt;56c9d47b&#45;eff2&#45;4a72&#45;a96c&#45;0414afdec146 -->\n",
+       "<!-- 516d37df&#45;76fa&#45;4c87&#45;81f3&#45;3182fb4d8c92&#45;&gt;96b783b5&#45;627f&#45;4a37&#45;b5f5&#45;1109dfd8191b -->\n",
        "<g id=\"edge3\" class=\"edge\">\n",
-       "<title>01d2b3a7&#45;0023&#45;4412&#45;9914&#45;8e2d5128af70&#45;&gt;56c9d47b&#45;eff2&#45;4a72&#45;a96c&#45;0414afdec146</title>\n",
+       "<title>516d37df&#45;76fa&#45;4c87&#45;81f3&#45;3182fb4d8c92&#45;&gt;96b783b5&#45;627f&#45;4a37&#45;b5f5&#45;1109dfd8191b</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M309.56,-94.59C335.01,-82.39 367.28,-66.92 394.33,-53.95\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"396.16,-56.96 403.67,-49.48 393.13,-50.64 396.16,-56.96\"/>\n",
        "</g>\n",
@@ -201,7 +201,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.sources.Source at 0x7f881006aaf0>"
+       "<graphviz.sources.Source at 0x7f0e8966cf70>"
       ]
      },
      "execution_count": 6,
